--- a/fxtools/src/main/resources/fxml/FXMLMainPanel.fxml
+++ b/fxtools/src/main/resources/fxml/FXMLMainPanel.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="rootBorderPane" minHeight="-Infinity" prefHeight="795.0" styleClass="root-controller-panel" stylesheets="@../styles/main.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane minHeight="-Infinity" prefHeight="795.0" styleClass="root-controller-panel" stylesheets="@../styles/main.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
    <center>
       <AnchorPane BorderPane.alignment="CENTER">
           <children>
@@ -22,11 +22,11 @@
    <top>
       <AnchorPane maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="60.0" style="-fx-background-color: #111;" BorderPane.alignment="CENTER">
          <children>
-            <StackPane alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="60.0" prefWidth="1080.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <StackPane alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" prefHeight="68.0" prefWidth="1080.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <HBox alignment="CENTER" prefHeight="54.0" spacing="24.0" styleClass="main-menu">
+                  <HBox alignment="CENTER" prefHeight="60.0" spacing="24.0" styleClass="main-menu">
                      <children>
-                        <ToggleButton fx:id="styleToggle" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#styleToggleAction" prefHeight="52.0" prefWidth="140.0" selected="true" styleClass="menu-toggle-button" text="CSS Style Builder" textAlignment="CENTER" wrapText="true">
+                        <ToggleButton maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#styleToggleAction" prefHeight="52.0" prefWidth="144.0" selected="true" styleClass="menu-toggle-button" text="CSS Style Builder" textAlignment="CENTER" wrapText="true">
                            <font>
                               <Font size="11.0" />
                            </font>
@@ -37,7 +37,7 @@
                               <ToggleGroup fx:id="menuToggleGroup" />
                            </toggleGroup>
                         </ToggleButton>
-                        <ToggleButton fx:id="splineToggle" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#splineToggleAction" prefHeight="52.0" prefWidth="140.0" styleClass="menu-toggle-button" text="Animation Tool" textAlignment="CENTER" toggleGroup="$menuToggleGroup" wrapText="true">
+                        <ToggleButton maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#splineToggleAction" prefHeight="52.0" prefWidth="144.0" styleClass="menu-toggle-button" text="Animation Tool" textAlignment="CENTER" toggleGroup="$menuToggleGroup" wrapText="true">
                            <font>
                               <Font size="11.0" />
                            </font>
@@ -48,7 +48,7 @@
                               <FontAwesomeIconView glyphName="LINE_CHART" size="42px" styleClass="font-awesome-menu-icon" />
                            </graphic>
                         </ToggleButton>
-                        <ToggleButton fx:id="derivedColorToggle" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#derivedToggleAction" prefHeight="52.0" prefWidth="140.0" styleClass="menu-toggle-button" text="Derivation Tool" textAlignment="CENTER" toggleGroup="$menuToggleGroup" wrapText="true">
+                        <ToggleButton maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#derivedToggleAction" prefHeight="52.0" prefWidth="144.0" styleClass="menu-toggle-button" text="Derivation Tool" textAlignment="CENTER" toggleGroup="$menuToggleGroup" wrapText="true">
                            <font>
                               <Font size="11.0" />
                            </font>
@@ -56,7 +56,7 @@
                               <FontAwesomeIconView fill="#b2b2b2" glyphName="EXCHANGE" size="40px" styleClass="font-awesome-menu-icon" />
                            </graphic>
                         </ToggleButton>
-                        <ToggleButton fx:id="gradientBuilderToggle" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#gradientToggleAction" prefHeight="52.0" prefWidth="140.0" styleClass="menu-toggle-button" text="Gradient Builder" textAlignment="CENTER" toggleGroup="$menuToggleGroup" wrapText="true">
+                        <ToggleButton maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#gradientToggleAction" prefHeight="52.0" prefWidth="144.0" styleClass="menu-toggle-button" text="Gradient Builder" textAlignment="CENTER" toggleGroup="$menuToggleGroup" wrapText="true">
                            <font>
                               <Font size="11.0" />
                            </font>
@@ -64,7 +64,7 @@
                               <FontAwesomeIconView fill="#b2b2b2" glyphName="PAINT_BRUSH" size="40px" styleClass="font-awesome-menu-icon" />
                            </graphic>
                         </ToggleButton>
-                        <ToggleButton fx:id="animationToggle" alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#animationToggleAction" prefHeight="52.0" prefWidth="140.0" styleClass="menu-toggle-button" text="Controls Demo" textAlignment="CENTER" toggleGroup="$menuToggleGroup" wrapText="true">
+                        <ToggleButton alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#animationToggleAction" prefHeight="52.0" prefWidth="144.0" styleClass="menu-toggle-button" text="Controls Demo" textAlignment="CENTER" toggleGroup="$menuToggleGroup" wrapText="true">
                            <graphic>
                               <FontAwesomeIconView fill="#b2b2b2" glyphName="PLAY_CIRCLE" size="42px" styleClass="font-awesome-menu-icon" />
                            </graphic>
