--- a/fxpaintpicker/src/main/resources/styles/gradient_picker.css
+++ b/fxpaintpicker/src/main/resources/styles/gradient_picker.css
@@ -30,8 +30,6 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 .root {
-    -fx-font-family: "Arial";
-    -fx-font-size: 1em; /* 14pt - 2 more than the default font */
     -fx-base: #31363b;
     -fx-background: #31363b;
     -fx-focus-color: #0093FF;
@@ -42,6 +40,10 @@
     /*derive(-fx-color, -42%) 50.5%, derive(-fx-color, 25%) 100%);*/
     -fx-outer-border: derive(-fx-color,35%);
     -fx-shadow-highlight-color: derive(-fx-background,-25.0%);
+}
+
+.fa-copy {
+    -fx-fill: derive(rgb(147, 147, 147), 25%);
 }
 
 .root-gradient {
@@ -88,7 +90,7 @@
 }
 
 .small-label {
-    -fx-font-size: 0.925em;
+    -fx-font-size: 0.825em;
     -fx-text-fill: derive(rgb(147, 147, 147), 25%);
     -fx-padding: 0;
 }
